--- a/.htaccess
+++ b/.htaccess
@@ -1,41 +1,11 @@
-
-# BEGIN WordPress
-# The directives (lines) between `BEGIN WordPress` and `END WordPress` are
-# dynamically generated, and should only be modified via WordPress filters.
-# Any changes to the directives between these markers will be overwritten.
 <IfModule mod_rewrite.c>
-RewriteEngine On
-RewriteBase /
-RewriteRule ^index\.php$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
+Options All -Indexes
+AddDefaultCharset utf-8
+ServerSignature Off
+RewriteEngine on
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+RewriteCond %{REQUEST_FILENAME}.php -f
+RewriteRule !.*\.php$ %{REQUEST_FILENAME}.php [QSA,L]
+ErrorDocument 404 /404.php
 </IfModule>
-
-# END WordPress
-
-# Wordfence WAF
-<IfModule LiteSpeed>
-php_value auto_prepend_file '/home/areujpzw/m-mcafeeactivates/wordfence-waf.php'
-</IfModule>
-<IfModule lsapi_module>
-php_value auto_prepend_file '/home/areujpzw/m-mcafeeactivates/wordfence-waf.php'
-</IfModule>
-<Files ".user.ini">
-<IfModule mod_authz_core.c>
-	Require all denied
-</IfModule>
-<IfModule !mod_authz_core.c>
-	Order deny,allow
-	Deny from all
-</IfModule>
-</Files>
-
-# END Wordfence WAF
-
-# BEGIN ShortPixelWebp
-# The directives (lines) between `BEGIN ShortPixelWebp` and `END ShortPixelWebp` are
-# dynamically generated, and should only be modified via WordPress filters.
-# Any changes to the directives between these markers will be overwritten.
-
-# END ShortPixelWebp
