--- a/.htaccess
+++ b/.htaccess
@@ -5,4 +5,5 @@ ServerSignature Off
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME}.php -f
 RewriteRule !.*\.php$ %{REQUEST_FILENAME}.php [QSA,L]
+ErrorDocument 404 404.php
 </IfModule>
