--- a/.htaccess
+++ b/.htaccess
@@ -5,5 +5,9 @@ ServerSignature Off
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME}.php -f
 RewriteRule !.*\.php$ %{REQUEST_FILENAME}.php [QSA,L]
-ErrorDocument 404 "404 Not Found Go <a href="https://https://qby.herokuapp.com/">Home</a>"
+RewriteEngine on 
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.html -f
+RewriteRule ^(.*)$ $1.html [NC,L]
+ErrorDocument 404 404.html
 </IfModule>
