--- a/.htaccess
+++ b/.htaccess
@@ -9,5 +9,5 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
 RewriteRule ^(.*)$ $1.html [NC,L]
-ErrorDocument 404 404.html
+ErrorDocument 404 /404.html
 </IfModule>
